--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
   },
   "description": "Sudoku Solver Kata",
   "require": {
-    "php": ">=8.1"
+    "php": ">=8.1",
+    "symfony/console": "^6.1"
   },
   "require-dev": {
     "phpunit/phpunit": "9.5.20"
